<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:id="@+id/activity_menu_principal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lsc.perrerampal.MenuPrincipal">

    <TextView
        android:id="@+id/BienvenidaTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlanco"
        android:text="@string/bienvenida_str"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp" />

    <TextView
        android:id="@+id/DescripTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlanco"
        android:text="@string/descripcionStr"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/SelectOpTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlanco"
        android:text="@string/selectOpStr"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_below="@+id/DescripTxt"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/listaAdopBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="ListaAdopcionCambioAct"
        android:text="@string/listaAdopStr"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_below="@+id/reportBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/reportBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="LevReportCambioAct"
        android:text="@string/reportStr"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_below="@+id/tallerBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/tallerBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="TallerCursoCambioAct"
        android:text="@string/talleresStr"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/SelectOpTxt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logocontrolcanino"
        android:layout_below="@+id/BienvenidaTxt"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/aboutTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listaAdopBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:onClick="aboutOnClick"
        android:text="@string/aboutStr"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/claroColor" />

</RelativeLayout>